// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> Render must match inactive() 1`] = `
<div>
  <input
    aria-label="Repository description"
    class="form-control input-inactive"
    placeholder="Fantastic placeholder"
    type="text"
    value=""
  />
</div>
`;

exports[`<Input /> Render must match regular() 1`] = `
<div>
  <input
    aria-label="Repository description"
    class="form-control"
    placeholder="Fantastic placeholder"
    type="text"
    value=""
  />
</div>
`;
